Starting to add images to gallery

--- a/index.html
+++ b/index.html
@@ -161,14 +161,19 @@
       <hr class="featurette-divider">
 
 <div id="links">
-    <a href="images/banana.jpg" title="Banana" data-gallery>
-        <img src="images/thumbnails/banana.jpg" alt="Banana">
+<!--
+    IMG-20141003-WA0003.jpg  IMG-20141009-WA0004.jpg  IMG-20141015-WA0003.jpg  IMG-20141016-WA0005.jpg  IMG-20141112-WA0000.jpg  IMG-20141201-WA0002.jpg
+IMG-20140918-WA0005.jpg  IMG-20140926-WA0001.jpg  IMG-20141002-WA0008.jpg  IMG-20141005-WA0013.jpg  IMG-20141009-WA0007.jpg  IMG-20141015-WA0006.jpg  IMG-20141027-WA0001.jpg  IMG-20141114-WA0005.jpg  IMG-20141203-WA0000.jpg
+IMG-20140925-WA0011.jpg  IMG-20140929-WA0002.jpg  IMG-20141002-WA0009.jpg  IMG-20141006-WA0001.jpg  IMG-20141010-WA0000.jpg  IMG-20141015-WA0007.jpg  IMG-20141111-WA0004.jpg  IMG-20141117-WA0002.jpg  IMG-20141203-WA0001.jpg -->
+
+    <a href="gillery/IMG-20140917-WA0005.jpg" title="Banana" data-gallery>
+        <img src="gallery/thumbnails/IMG-20140917-WA0005.jpg" alt="Banana">
     </a>
-    <a href="images/apple.jpg" title="Apple" data-gallery>
-        <img src="images/thumbnails/apple.jpg" alt="Apple">
+    <a href="gallery/IMG-20140925-WA0012.jpg" title="Apple" data-gallery>
+        <img src="gillery/thumbnails/IMG-20140925-WA0012.jpg" alt="Apple">
     </a>
-    <a href="images/orange.jpg" title="Orange" data-gallery>
-        <img src="images/thumbnails/orange.jpg" alt="Orange">
+    <a href="gallery/IMG-20141002-WA0007.jpg" title="Orange" data-gallery>
+        <img src="gallery/thumbnails/IMG-20141002-WA0007.jpg" alt="Orange">
     </a>
 </div>
 
