Trying a background for the slides.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Project name</a>
+              <a class="navbar-brand" href="http://alpha.ons.gov.uk">Newport Explorers</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
@@ -96,11 +96,11 @@
           </div>
         </div>
         <div class="item">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAGZmZgAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+          <img src="gallery=IMG-20140918-WA0005.jpg" alt="Pastor Jurado-Traverso">
           <div class="container">
             <div class="carousel-caption">
               <h1>Pastor Two-steaks Jurado</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p>Man vs. meat. Literally unstoppable, whether defeating IE9 or devouring a two-person sized meal.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
             </div>
           </div>
