--- a/index.html
+++ b/index.html
@@ -202,18 +202,20 @@
 
 <div id="links">
 <!--
-    IMG-20141003-WA0003.jpg  IMG-20141009-WA0004.jpg  IMG-20141015-WA0003.jpg  IMG-20141016-WA0005.jpg  IMG-20141112-WA0000.jpg  IMG-20141201-WA0002.jpg
-IMG-20140918-WA0005.jpg  IMG-20140926-WA0001.jpg  IMG-20141002-WA0008.jpg  IMG-20141005-WA0013.jpg  IMG-20141009-WA0007.jpg  IMG-20141015-WA0006.jpg  IMG-20141027-WA0001.jpg  IMG-20141114-WA0005.jpg  IMG-20141203-WA0000.jpg
-IMG-20140925-WA0011.jpg  IMG-20140929-WA0002.jpg  IMG-20141002-WA0009.jpg  IMG-20141006-WA0001.jpg  IMG-20141010-WA0000.jpg  IMG-20141015-WA0007.jpg  IMG-20141111-WA0004.jpg  IMG-20141117-WA0002.jpg  IMG-20141203-WA0001.jpg -->
+                   fireplace.jpg  gemelli.jpg  IMG-20141203-WA0000.jpg  lilo.jpg   meat.jpg   newport.jpg  purecafe.jpg  stairs.jpg  taxi.jpg    toast.jpg  userlab.jpg
+coffee1.jpg  desk.jpg   fieldshouse.jpg  foodbag.jpg    ian.jpg      kitchen.jpg              lunch.jpg  myles.jpg  Pastor.jpg   reading.jpg   study.jpg   thumbnails  train.jpg  wigandpen.jpg -->
 
-    <a href="gillery/IMG-20140917-WA0005.jpg" title="Banana" data-gallery>
-        <img src="gallery/thumbnails/IMG-20140917-WA0005.jpg" alt="Banana">
+    <a href="gillery/bren.jpg" title="Bren" data-gallery>
+        <img src="gallery/thumbnails/bren.jpg" alt="Bren">
     </a>
-    <a href="gallery/IMG-20140925-WA0012.jpg" title="Apple" data-gallery>
-        <img src="gillery/thumbnails/IMG-20140925-WA0012.jpg" alt="Apple">
+    <a href="gallery/david.jpg" title="David" data-gallery>
+        <img src="gillery/thumbnails/david.jpg" alt="David">
     </a>
-    <a href="gallery/IMG-20141002-WA0007.jpg" title="Orange" data-gallery>
-        <img src="gallery/thumbnails/IMG-20141002-WA0007.jpg" alt="Orange">
+    <a href="gallery/farts.jpg" title="Farts" data-gallery>
+        <img src="gallery/thumbnails/farts.jpg" alt="Farts">
+    </a>
+    <a href="gallery/fireplace.jpg" title="Fireplace" data-gallery>
+        <img src="gallery/thumbnails/fireplace.jpg" alt="Fireplace">
     </a>
 </div>
 
