Adding to the image gallery

--- a/index.html
+++ b/index.html
@@ -202,17 +202,39 @@
 
 <div id="links">
 <!--
-                   fireplace.jpg  gemelli.jpg  IMG-20141203-WA0000.jpg  lilo.jpg   meat.jpg   newport.jpg  purecafe.jpg  stairs.jpg  taxi.jpg    toast.jpg  userlab.jpg
+                          purecafe.jpg  stairs.jpg  taxi.jpg    toast.jpg  userlab.jpg
 coffee1.jpg  desk.jpg   fieldshouse.jpg  foodbag.jpg    ian.jpg      kitchen.jpg              lunch.jpg  myles.jpg  Pastor.jpg   reading.jpg   study.jpg   thumbnails  train.jpg  wigandpen.jpg -->
 
-    <a href="gillery/bren.jpg" title="Bren" data-gallery>
+    <a href="gallery/bren.jpg" title="Bren" data-gallery>
         <img src="gallery/thumbnails/bren.jpg" alt="Bren">
     </a>
     <a href="gallery/david.jpg" title="David" data-gallery>
-        <img src="gillery/thumbnails/david.jpg" alt="David">
+        <img src="gallery/thumbnails/david.jpg" alt="David">
     </a>
     <a href="gallery/farts.jpg" title="Farts" data-gallery>
         <img src="gallery/thumbnails/farts.jpg" alt="Farts">
+    </a>
+    <a href="gallery/fireplace.jpg" title="Fireplace" data-gallery>
+        <img src="gallery/thumbnails/fireplace.jpg" alt="Fireplace">
+    </a>
+    <a href="gallery/gemelli.jpg" title="Gemelli" data-gallery>
+        <img src="gallery/thumbnails/gemelli.jpg" alt="Gemelli">
+    </a>
+    <a href="gallery/christmas.jpg" title="Christmas" data-gallery>
+        <img src="gallery/thumbnails/christmas.jpg" alt="Christmas">
+    </a>
+    <a href="gallery/lilo.jpg" title="Lilo - our favourite restaurant in Newport" data-gallery>
+        <img src="gallery/thumbnails/lilo.jpg" alt="Lilo - our favourite restaurant in Newport">
+    </a>
+    <a href="gallery/meat.jpg" title="Pastor vs. meat" data-gallery>
+        <img src="gallery/thumbnails/meat.jpg" alt="astor vs. meat">
+    </a>
+    <a href="gallery/newport.jpg" title="Newport" data-gallery>
+        <img src="gallery/thumbnails/newport.jpg" alt="Newport">
+    </a>
+
+    <a href="gallery/purecafe.jpg" title="Breakfast at Pure Cafe in Cardiff" data-gallery>
+        <img src="gallery/thumbnails/purecafe.jpg" alt="Breakfast at Pure Cafe in Cardiff">
     </a>
     <a href="gallery/fireplace.jpg" title="Fireplace" data-gallery>
         <img src="gallery/thumbnails/fireplace.jpg" alt="Fireplace">
