Added a carousel background image

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+          <img src="gallery/stairs.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Newport Explorers - Alpha Tour</h1>
