Added more gallery images

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="gallery/pastor.jpg" alt="Pastor Jurado-Traverso">
+          <img src="gallery/meat.jpg" alt="Pastor Jurado-Traverso">
           <div class="container">
             <div class="carousel-caption">
               <h1>Pastor Two-steaks Jurado</h1>
@@ -201,9 +201,6 @@
       <hr class="featurette-divider">
 
 <div id="links">
-<!--
-                          purecafe.jpg  stairs.jpg  taxi.jpg    toast.jpg  userlab.jpg
-coffee1.jpg  desk.jpg   fieldshouse.jpg  foodbag.jpg    ian.jpg      kitchen.jpg              lunch.jpg  myles.jpg  Pastor.jpg   reading.jpg   study.jpg   thumbnails  train.jpg  wigandpen.jpg -->
 
     <a href="gallery/bren.jpg" title="Bren" data-gallery>
         <img src="gallery/thumbnails/bren.jpg" alt="Bren">
@@ -232,14 +229,41 @@ coffee1.jpg  desk.jpg   fieldshouse.jpg  foodbag.jpg    ian.jpg      kitchen.jpg
     <a href="gallery/newport.jpg" title="Newport" data-gallery>
         <img src="gallery/thumbnails/newport.jpg" alt="Newport">
     </a>
-
     <a href="gallery/purecafe.jpg" title="Breakfast at Pure Cafe in Cardiff" data-gallery>
         <img src="gallery/thumbnails/purecafe.jpg" alt="Breakfast at Pure Cafe in Cardiff">
     </a>
-    <a href="gallery/fireplace.jpg" title="Fireplace" data-gallery>
-        <img src="gallery/thumbnails/fireplace.jpg" alt="Fireplace">
+    <a href="gallery/stairs.jpg" title="The Newport Explorers at Fields House" data-gallery>
+        <img src="gallery/thumbnails/stairs.jpg" alt="The Newport Explorers at Fields House">
+    </a>
+    <a href="gallery/stairs.jpg" title="The Newport Explorers at Fields House" data-gallery>
+        <img src="gallery/thumbnails/stairs.jpg" alt="The Newport Explorers at Fields House">
+    </a>
+    <a href="gallery/taxi.jpg" title="Travelling to work was occasionally hit-and-miss" data-gallery>
+        <img src="gallery/thumbnails/taxi.jpg" alt="It's not just the trains that have delays">
+    </a>
+    <a href="gallery/toast.jpg" title="Coffee #1 was pretty much funded by the project" data-gallery>
+        <img src="gallery/thumbnails/toast.jpg" alt="Breakfasts at Coffee #1 Newport and Cardiff">
+    </a>
+    <a href="gallery/userlab.jpg" title="That's one sweet user testing lab you got there" data-gallery>
+        <img src="gallery/thumbnails/userlab.jpg" alt="The kids back in London were green with envy when they saw this setup">
+    </a>
+    <a href="gallery/coffee1.jpg" title="The other Coffee #1" data-gallery>
+        <img src="gallery/thumbnails/coffee1.jpg" alt="A total of three Coffee #1 shops saw us through">
+    </a>
+    <a href="gallery/desk.jpg" title="Week 1 - my that was a while ago" data-gallery>
+        <img src="gallery/thumbnails/desk.jpg" alt="From humble beginnings to happy endings">
+    </a>
+    <a href="gallery/fieldshouse.jpg" title="A welcome break from the Travelodge" data-gallery>
+        <img src="gallery/thumbnails/fieldshouse.jpg" alt="Who knew there was such beauty in Newport?">
+    </a>
+
+    <a href="gallery/foodbag.jpg" title="David bringing in a week's shopping to cook for the team at Fields House" data-gallery>
+        <img src="gallery/thumbnails/foodbag.jpg" alt="Not only can he code, he can cook too">
     </a>
 </div>
+<!--
+                               .jpg  .jpg
+.jpg  .jpg   .jpg  .jpg    ian.jpg      kitchen.jpg              lunch.jpg  myles.jpg  Pastor.jpg   reading.jpg   study.jpg   thumbnails  train.jpg  wigandpen.jpg -->
 
       <hr class="featurette-divider">
 
