Updated with more photos and some tweaks and cleanup.

--- a/index.html
+++ b/index.html
@@ -19,10 +19,6 @@
 <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
 <link rel="stylesheet" href="css/bootstrap-image-gallery.min.css">
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
-
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -256,14 +252,38 @@
     <a href="gallery/fieldshouse.jpg" title="A welcome break from the Travelodge" data-gallery>
         <img src="gallery/thumbnails/fieldshouse.jpg" alt="Who knew there was such beauty in Newport?">
     </a>
-
     <a href="gallery/foodbag.jpg" title="David bringing in a week's shopping to cook for the team at Fields House" data-gallery>
         <img src="gallery/thumbnails/foodbag.jpg" alt="Not only can he code, he can cook too">
     </a>
+
+    <a href="gallery/ian.jpg" title="About to taste a bit of luxury at the premier inn" data-gallery>
+        <img src="gallery/thumbnails/ian.jpg" alt="Happy days at the Premier Inn">
+    </a>
+    <a href="gallery/kitchen.jpg" title="Raise a glass and relax after work" data-gallery>
+        <img src="gallery/thumbnails/kitchen.jpg" alt="Good times around the kitchen table at Fields House in Newport">
+    </a>
+    <a href="gallery/lunch.jpg" title="Good old canteen - great curry every Thursday" data-gallery>
+        <img src="gallery/thumbnails/lunch.jpg" alt="Lunch in the staff canteen - every day, and curry on Thursdays">
+    </a>
+    <a href="gallery/myles.jpg" title="The man who kept everything organised" data-gallery>
+        <img src="gallery/thumbnails/myles.jpg" alt="Nothing would have happened without Myles keeping the dragons of practicality at bay.">
+    </a>
+    <a href="gallery/pastor.jpg" title="Star of the show on website are the charts, and Pastor did the charts." data-gallery>
+        <img src="gallery/thumbnails/pastor.jpg" alt="A man on a mission and mission accomplished.">
+    </a>
+    <a href="gallery/reading.jpg" title="Reading station - the meeting point on the way to Waled" data-gallery>
+        <img src="gallery/thumbnails/reading.jpg" alt="From all our different corners, we converged at Reading for the trip to Wales.">
+    </a>
+    <a href="gallery/study.jpg" title="David in the study at Fields House" data-gallery>
+        <img src="gallery/thumbnails/study.jpg" alt="Fields house provided a delightful study, ideal for after-hours working.">
+    </a>
+    <a href="gallery/train.jpg" title="Train" data-gallery>
+        <img src="gallery/thumbnails/train.jpg" alt="Train">
+    </a>
+    <a href="gallery/wigandpen.jpg" title="The Wig and Pen, one of the nicest pubs in Newport" data-gallery>
+        <img src="gallery/thumbnails/wigandpen.jpg" alt="After all the fun at Lilo and Gemelli, the Wig and Pen was good down-to-earth pub grub.">
+    </a>
 </div>
-<!--
-                               .jpg  .jpg
-.jpg  .jpg   .jpg  .jpg    ian.jpg      kitchen.jpg              lunch.jpg  myles.jpg  Pastor.jpg   reading.jpg   study.jpg   thumbnails  train.jpg  wigandpen.jpg -->
 
       <hr class="featurette-divider">
 
@@ -273,7 +293,7 @@
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive" data-src="img/placeholder.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -281,7 +301,7 @@
 
       <div class="row featurette">
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive" data-src="img/placeholder.jpg" alt="Generic placeholder image">
         </div>
         <div class="col-md-7">
           <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
@@ -297,7 +317,7 @@
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive" data-src="img/placeholder.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -355,9 +375,9 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    <script src="../../assets/js/docs.min.js"></script>
+    <script src="js/docs.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="js/ie10-viewport-bug-workaround.js"></script>
 
     <!-- Image gallery -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
