Cleaning up captions.

--- a/index.html
+++ b/index.html
@@ -255,24 +255,23 @@
     <a href="gallery/foodbag.jpg" title="David bringing in a week's shopping to cook for the team at Fields House" data-gallery>
         <img src="gallery/thumbnails/foodbag.jpg" alt="Not only can he code, he can cook too">
     </a>
-
     <a href="gallery/ian.jpg" title="About to taste a bit of luxury at the premier inn" data-gallery>
         <img src="gallery/thumbnails/ian.jpg" alt="Happy days at the Premier Inn">
     </a>
     <a href="gallery/kitchen.jpg" title="Raise a glass and relax after work" data-gallery>
         <img src="gallery/thumbnails/kitchen.jpg" alt="Good times around the kitchen table at Fields House in Newport">
     </a>
-    <a href="gallery/lunch.jpg" title="Good old canteen - great curry every Thursday" data-gallery>
+    <a href="gallery/lunch.jpg" title="Lunch in the staff canteen - every day, and curry on Thursdays" data-gallery>
         <img src="gallery/thumbnails/lunch.jpg" alt="Lunch in the staff canteen - every day, and curry on Thursdays">
     </a>
-    <a href="gallery/myles.jpg" title="The man who kept everything organised" data-gallery>
-        <img src="gallery/thumbnails/myles.jpg" alt="Nothing would have happened without Myles keeping the dragons of practicality at bay.">
+    <a href="gallery/myles.jpg" title="Nothing would have happened without Myles keeping the dragons of process at bay." data-gallery>
+        <img src="gallery/thumbnails/myles.jpg" alt="Nothing would have happened without Myles keeping the dragons of process at bay.">
     </a>
-    <a href="gallery/pastor.jpg" title="Star of the show on website are the charts, and Pastor did the charts." data-gallery>
-        <img src="gallery/thumbnails/pastor.jpg" alt="A man on a mission and mission accomplished.">
+    <a href="gallery/pastor.jpg" title="Star of the show on the website are the interactive charts - and Pastor did the charts." data-gallery>
+        <img src="gallery/thumbnails/pastor.jpg" alt="Star of the show on website are the interactive charts - and Pastor did the charts.">
     </a>
-    <a href="gallery/reading.jpg" title="Reading station - the meeting point on the way to Waled" data-gallery>
-        <img src="gallery/thumbnails/reading.jpg" alt="From all our different corners, we converged at Reading for the trip to Wales.">
+    <a href="gallery/reading.jpg" title="From all our different corners of Britain, we converged at Reading for the trip to Wales." data-gallery>
+        <img src="gallery/thumbnails/reading.jpg" alt="From all our different corners of Britain, we converged at Reading for the trip to Wales.">
     </a>
     <a href="gallery/study.jpg" title="David in the study at Fields House" data-gallery>
         <img src="gallery/thumbnails/study.jpg" alt="Fields house provided a delightful study, ideal for after-hours working.">
@@ -380,9 +379,8 @@
     <script src="js/ie10-viewport-bug-workaround.js"></script>
 
     <!-- Image gallery -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="//blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script>
-<script src="js/bootstrap-image-gallery.min.js"></script>
+    <script src="//blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script>
+    <script src="js/bootstrap-image-gallery.min.js"></script>
 
   </body>
 </html>
