Starting to add more pictures.

--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
     <a href="gallery/david.jpg" title="David" data-gallery>
         <img src="gallery/thumbnails/david.jpg" alt="David">
     </a>
-    <a href="gallery/farts.jpg" title="Farts" data-gallery>
-        <img src="gallery/thumbnails/farts.jpg" alt="Farts">
+    <a href="gallery/farts.jpg" title="The Wig and Pen provided the perfect location" data-gallery>
+        <img src="gallery/thumbnails/farts.jpg" alt="The Wig and Pen provided the perfect location">
     </a>
     <a href="gallery/fireplace.jpg" title="Fireplace" data-gallery>
         <img src="gallery/thumbnails/fireplace.jpg" alt="Fireplace">
@@ -282,6 +282,38 @@
     <a href="gallery/wigandpen.jpg" title="The Wig and Pen, one of the nicest pubs in Newport" data-gallery>
         <img src="gallery/thumbnails/wigandpen.jpg" alt="After all the fun at Lilo and Gemelli, the Wig and Pen was good down-to-earth pub grub.">
     </a>
+
+    <a href="gallery/aaron.jpg" title="Aaron could get so focused that he would forget to eat." data-gallery>
+        <img src="gallery/thumbnails/aaron.jpg" alt="Aaron could get so focused that he would forget to eat.">
+    </a>
+    <a href="gallery/cote.jpg" title="Pastor attacking the best steak of the project steak at Cote" data-gallery>
+        <img src="gallery/thumbnails/cote.jpg" alt="Pastor attacking the best steak of the project steak at Cote">
+    </a>
+    <a href="gallery/fieldshouse.jpg" title="firldshouse" data-gallery>
+        <img src="gallery/thumbnails/fieldshouse.jpg" alt="firldshouse.">
+    </a>
+    <a href="gallery/indian.jpg" title="indian" data-gallery>
+        <img src="gallery/thumbnails/indian.jpg" alt="indian.">
+    </a>
+    <a href="gallery/kebab.jpg" title="We ate the most tasty and copious food at Turkish and Middle-Eastern restaurants." data-gallery>
+        <img src="gallery/thumbnails/kebab.jpg" alt="We ate the most tasty and copious food at Turkish and Middle-Eastern restaurants.">
+    </a>
+    <a href="gallery/mac.jpg" title="A new Mac put Aaron in pole position with the fastest laptop on the project. In time for the last week." data-gallery>
+        <img src="gallery/thumbnails/mac.jpg" alt="A new Mac put Aaron in pole position with the fastest laptop on the project. In time for the last week..">
+    </a>
+    <a href="gallery/madeira.jpg" title="First night in Cardiff and it's a Portugese restaurant. We loved how eclectic Cardiff and Newport are." data-gallery>
+        <img src="gallery/thumbnails/madeira.jpg" alt="First night in Cardiff and it's a Portugese restaurant. We loved how eclectic Cardiff and Newport are.">
+    </a>
+    <a href="gallery/receipt.jpg" title="So many receipts, so many expenses, so much admin. Daily photo shoots for every purchase." data-gallery>
+        <img src="gallery/thumbnails/receipt.jpg" alt="So many receipts, so many expenses, so much admin. Daily photo shoots for every purchase..">
+    </a>
+    <a href="gallery/victory.jpg" title="The successful Explorers heading home on delivery day. Finished, to the minute, and ready for a quiet weekend before the work goes public." data-gallery>
+        <img src="gallery/thumbnails/victory.jpg" alt="The successful Explorers heading home on delivery day. Finished, to the minute, and ready for a quiet weekend before the work goes public.">
+    </a>
+    <a href="gallery/farts.jpg" title="farts" data-gallery>
+        <img src="gallery/thumbnails/farts.jpg" alt="farts.">
+    </a>
+    
 </div>
 
       <hr class="featurette-divider">
