--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAFVVVQAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+          <img src="gallery/aaron.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Aaron Bag-for-life Witter</h1>
@@ -112,7 +112,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAFVVVQAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+          <img src="gallery/bren.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Bren Bus-stop Eser</h1>
@@ -122,7 +122,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAFVVVQAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+          <img src="gallery/ian.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Ian Strollin' Hadley</h1>
@@ -132,7 +132,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAFVVVQAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+          <img src="gallery/myles.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Myles Taxi Roberts</h1>
@@ -142,7 +142,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAFVVVQAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+          <img src="gallery/kebab.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>David Chef Carboni</h1>
