Text updates to the carousel.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Newport Explorers - Alpha Tour</h1>
-              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
+              <p>This is the story of the team behind the website. Newport may not have the most glamorous reputation, but we made the most of it and had plenty of good times, including staying in Irene Adler's house - from the Sherlock episode A Scandal in Belgravia.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
             </div>
           </div>
@@ -106,7 +106,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Aaron Bag-for-life Witter</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p>Well how else do you get a laptop to the office and back?</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
             </div>
           </div>
@@ -116,7 +116,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Bren Bus-stop Eser</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p>If the smokers corner looked like a bus shelter, then Bren would catch a lot of busses.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
             </div>
           </div>
@@ -125,8 +125,8 @@
           <img src="gallery/ian.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Ian Strollin' Hadley</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <h1>Ian Six Sugars Hadley</h1>
+              <p>Scandalising the ladies in the coffee shop with nothing more than a cup of tea and a sugar dispenser.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
             </div>
           </div>
@@ -135,8 +135,8 @@
           <img src="gallery/myles.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Myles Taxi Roberts</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <h1>Myles Evernote Roberts</h1>
+              <p>Everyone has their preferred way to get things done, and Evernote does it for Myles. Why it doesn't for the rest of the team is still a mystery.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
             </div>
           </div>
@@ -145,8 +145,8 @@
           <img src="gallery/kebab.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>David Chef Carboni</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <h1>David The Chef Carboni</h1>
+              <p>A man with two creative outlets in life - coding and cooking. No cases of food poisoning were recorded as far as I know.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
             </div>
           </div>
