Text updates to the carousel.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Newport Explorers - Alpha Tour</h1>
-              <p>This is the story of the team behind the website. Newport may not have the most glamorous reputation, but we made the most of it and had plenty of good times, including staying in Irene Adler's house - from the Sherlock episode A Scandal in Belgravia.</p>
+              <p>This is the story of the team behind the website. Newport may not have the most glamorous reputation, but we made the most of it and had plenty of good times, including staying in Irene Adler's house from the Sherlock episode A Scandal in Belgravia.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
             </div>
           </div>
@@ -106,7 +106,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Aaron Bag-for-life Witter</h1>
-              <p>Well how else do you get a laptop to the office and back?</p>
+              <p>Well how else do you get a laptop to the office and back? Known for extreme code focus, to the point of forgetting to eat.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
             </div>
           </div>
@@ -116,7 +116,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Bren Bus-stop Eser</h1>
-              <p>If the smokers corner looked like a bus shelter, then Bren would catch a lot of busses.</p>
+              <p>If the smokers corner looked like a bus shelter, then Bren would catch a lot of busses. And ate Angular JS for breakfast.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
             </div>
           </div>
@@ -146,7 +146,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>David The Chef Carboni</h1>
-              <p>A man with two creative outlets in life - coding and cooking. No cases of food poisoning were recorded as far as I know.</p>
+              <p>A man with two creative outlets in life: coding and cooking. No cases of food poisoning were recorded as far as I know.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
             </div>
           </div>
