--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
 <link rel="stylesheet" href="css/bootstrap-image-gallery.min.css">
+<link rel="stylesheet" href="css/demo.css">
+
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -87,8 +89,8 @@
             <div class="carousel-caption">
               <h1>Newport Explorers - Alpha Tour</h1>
               <p>This is the story of the team behind the website. Newport may not have the most glamorous reputation, but we made the most of it and had plenty of good times, including staying in Irene Adler's house from the Sherlock episode A Scandal in Belgravia.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
-            </div>
+<!--               <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+ -->            </div>
           </div>
         </div>
         <div class="item">
@@ -97,8 +99,8 @@
             <div class="carousel-caption">
               <h1>Pastor Two-steaks Jurado</h1>
               <p>Man vs. meat. Literally unstoppable, whether defeating IE9 or devouring a two-person sized meal.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-            </div>
+<!--               <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+ -->            </div>
           </div>
         </div>
         <div class="item">
@@ -107,7 +109,7 @@
             <div class="carousel-caption">
               <h1>Aaron Bag-for-life Witter</h1>
               <p>Well how else do you get a laptop to the office and back? Known for extreme code focus, to the point of forgetting to eat.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+              <!-- <!-- <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p> -->
             </div>
           </div>
         </div>
@@ -117,7 +119,7 @@
             <div class="carousel-caption">
               <h1>Bren Bus-stop Eser</h1>
               <p>If the smokers corner looked like a bus shelter, then Bren would catch a lot of busses. And ate Angular JS for breakfast.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+              <!-- <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p> -->
             </div>
           </div>
         </div>
@@ -127,7 +129,7 @@
             <div class="carousel-caption">
               <h1>Ian Six Sugars Hadley</h1>
               <p>Scandalising the ladies in the coffee shop with nothing more than a cup of tea and a sugar dispenser.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+              <!-- <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p> -->
             </div>
           </div>
         </div>
@@ -137,7 +139,7 @@
             <div class="carousel-caption">
               <h1>Myles Evernote Roberts</h1>
               <p>Everyone has their preferred way to get things done, and Evernote does it for Myles. Why it doesn't for the rest of the team is still a mystery.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+              <!-- <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p> -->
             </div>
           </div>
         </div>
@@ -147,7 +149,7 @@
             <div class="carousel-caption">
               <h1>David The Chef Carboni</h1>
               <p>A man with two creative outlets in life: coding and cooking. No cases of food poisoning were recorded as far as I know.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+              <!-- <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p> -->
             </div>
           </div>
         </div>
@@ -170,32 +172,31 @@
     <div class="container marketing">
 
       <!-- Three columns of text below the carousel -->
-      <div class="row">
+     <!--  <div class="row">
         <div class="col-lg-4">
           <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
           <h2>Heading</h2>
           <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
+        </div> --><!-- /.col-lg-4 -->
+        <!-- div class="col-lg-4">
           <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
           <h2>Heading</h2>
           <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
+        </div> --><!-- /.col-lg-4 -->
+       <!--  <div class="col-lg-4">
           <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
           <h2>Heading</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
-      </div><!-- /.row -->
+     <!--  </div> --><!-- /.row -->
 
 
       <!-- START THE FEATURETTES -->
 
-      <hr class="featurette-divider">
-
+     
 <div id="links">
 
     <a href="gallery/bren.jpg" title="Bren" data-gallery>
@@ -306,7 +307,7 @@
     </a>
 
 </div>
-
+<!-- 
       <hr class="featurette-divider">
 
       <div class="row featurette">
@@ -343,7 +344,7 @@
         </div>
       </div>
 
-      <hr class="featurette-divider">
+      <hr class="featurette-divider"> -->
 
       <!-- /END THE FEATURETTES -->
 
