--- a/index.html
+++ b/index.html
@@ -223,6 +223,9 @@
     <a href="gallery/lilo.jpg" title="Lilo - our favourite restaurant in Newport" data-gallery>
         <img src="gallery/thumbnails/lilo.jpg" alt="Lilo - our favourite restaurant in Newport">
     </a>
+    <a href="gallery/lilo-cardiff.jpg" title="Lilo Cardiff - our favourite sister restaurant in Cardiff after the Meating Place" data-gallery>
+        <img src="gallery/thumbnails/lilo.jpg" alt="Lilo Cardiff - our favourite sister restaurant in Cardiff after the Meating Place">
+    </a>
     <a href="gallery/meat.jpg" title="Pastor vs. meat" data-gallery>
         <img src="gallery/thumbnails/meat.jpg" alt="astor vs. meat">
     </a>
