Added a couple more images to the gallery.

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <img src="gallery/thumbnails/lilo.jpg" alt="Lilo - our favourite restaurant in Newport">
     </a>
     <a href="gallery/lilo-cardiff.jpg" title="Lilo Cardiff - our favourite sister restaurant in Cardiff after the Meating Place" data-gallery>
-        <img src="gallery/thumbnails/lilo.jpg" alt="Lilo Cardiff - our favourite sister restaurant in Cardiff after the Meating Place">
+        <img src="gallery/thumbnails/lilo-cardiff.jpg" alt="Lilo Cardiff - our favourite sister restaurant in Cardiff after the Meating Place">
     </a>
     <a href="gallery/meat.jpg" title="Pastor vs. meat" data-gallery>
         <img src="gallery/thumbnails/meat.jpg" alt="astor vs. meat">
@@ -310,6 +310,9 @@
     </a>
     <a href="gallery/victory.jpg" title="The successful Explorers heading home on delivery day. Finished, to the minute, and ready for a quiet weekend before the work goes public." data-gallery>
         <img src="gallery/thumbnails/victory.jpg" alt="The successful Explorers heading home on delivery day. Finished, to the minute, and ready for a quiet weekend before the work goes public.">
+    </a>
+    <a href="gallery/live.jpg" title="Deploying the final release over 4g at Reading station." data-gallery>
+        <img src="gallery/thumbnails/live.jpg" alt="Deploying the final release over 4g at Reading station.">
     </a>
 
 </div>
