Tweaks to image captions.

--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
     <a href="gallery/study.jpg" title="David in the study at Fields House" data-gallery>
         <img src="gallery/thumbnails/study.jpg" alt="Fields house provided a delightful study, ideal for after-hours working.">
     </a>
-    <a href="gallery/train.jpg" title="Train" data-gallery>
-        <img src="gallery/thumbnails/train.jpg" alt="Train">
+    <a href="gallery/train.jpg" title="A familiar view, coming into Newport on a Monday morning." data-gallery>
+        <img src="gallery/thumbnails/train.jpg" alt="A familiar view, coming into Newport on a Monday morning.">
     </a>
     <a href="gallery/wigandpen.jpg" title="The Wig and Pen, one of the nicest pubs in Newport" data-gallery>
         <img src="gallery/thumbnails/wigandpen.jpg" alt="After all the fun at Lilo and Gemelli, the Wig and Pen was good down-to-earth pub grub.">
@@ -290,11 +290,11 @@
     <a href="gallery/aaron.jpg" title="Aaron could get so focused that he would forget to eat." data-gallery>
         <img src="gallery/thumbnails/aaron.jpg" alt="Aaron could get so focused that he would forget to eat.">
     </a>
-    <a href="gallery/cote.jpg" title="Pastor attacking the best steak of the project steak at Cote" data-gallery>
+    <a href="gallery/cote.jpg" title="Pastor attacking the best steak of the project at Cote" data-gallery>
         <img src="gallery/thumbnails/cote.jpg" alt="Pastor attacking the best steak of the project steak at Cote">
     </a>
-    <a href="gallery/indian.jpg" title="indian" data-gallery>
-        <img src="gallery/thumbnails/indian.jpg" alt="indian.">
+    <a href="gallery/indian.jpg" title="The Duchess of Delhi, probably the nicest spot in Cardiff Bay after Cote." data-gallery>
+        <img src="gallery/thumbnails/indian.jpg" alt="The Duchess of Delhi, probably the nicest spot in Cardiff Bay after Cote.">
     </a>
     <a href="gallery/kebab.jpg" title="We ate the most tasty and copious food at Turkish and Middle-Eastern restaurants." data-gallery>
         <img src="gallery/thumbnails/kebab.jpg" alt="We ate the most tasty and copious food at Turkish and Middle-Eastern restaurants.">
