Tweaks to image captions.

--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
      
 <div id="links">
 
-    <a href="gallery/fireplace.jpg" title="Fireplace" data-gallery>
-        <img src="gallery/thumbnails/fireplace.jpg" alt="Fireplace">
+    <a href="gallery/fireplace.jpg" title="The Newport Explorers pause for a fireplace pose at Fields House. Emma (and Airbnb) you did an awesome job." data-gallery>
+        <img src="gallery/thumbnails/fireplace.jpg" alt="The Newport Explorers pause for a fireplace pose at Fields House. Emma (and Airbnb) you did an awesome job.">
     </a>
     <a href="gallery/bren.jpg" title="Bren" data-gallery>
         <img src="gallery/thumbnails/bren.jpg" alt="Bren">
