Added the last supper.

--- a/index.html
+++ b/index.html
@@ -259,8 +259,11 @@
     <a href="gallery/foodbag.jpg" title="David bringing in a week's shopping to cook for the team at Fields House" data-gallery>
         <img src="gallery/thumbnails/foodbag.jpg" alt="Not only can he code, he can cook too">
     </a>
-    <a href="gallery/ian.jpg" title="About to taste a bit of luxury at the premier inn" data-gallery>
-        <img src="gallery/thumbnails/ian.jpg" alt="Happy days at the Premier Inn">
+    <a href="gallery/premier.jpg" title="About to taste a bit of luxury at the premier inn" data-gallery>
+        <img src="gallery/thumbnails/premier.jpg" alt="Happy days at the Premier Inn">
+    </a>
+    <a href="gallery/myles.jpg" title="Nothing would have happened without Myles keeping the dragons of process at bay." data-gallery>
+        <img src="gallery/thumbnails/myles.jpg" alt="Nothing would have happened without Myles keeping the dragons of process at bay.">
     </a>
     <a href="gallery/kitchen.jpg" title="Raise a glass and relax after work" data-gallery>
         <img src="gallery/thumbnails/kitchen.jpg" alt="Good times around the kitchen table at Fields House in Newport">
@@ -268,8 +271,8 @@
     <a href="gallery/lunch.jpg" title="Lunch in the staff canteen - every day, and curry on Thursdays" data-gallery>
         <img src="gallery/thumbnails/lunch.jpg" alt="Lunch in the staff canteen - every day, and curry on Thursdays">
     </a>
-    <a href="gallery/myles.jpg" title="Nothing would have happened without Myles keeping the dragons of process at bay." data-gallery>
-        <img src="gallery/thumbnails/myles.jpg" alt="Nothing would have happened without Myles keeping the dragons of process at bay.">
+    <a href="gallery/woohoo.jpg" title="Sometimes it's laugh or cry in Newport and you just have to let it all hang out." data-gallery>
+        <img src="gallery/thumbnails/woohoo.jpg" alt="Sometimes it's laugh or cry in Newport and you just have to let it all hang out.">
     </a>
     <a href="gallery/pastor.jpg" title="Star of the show on the website are the interactive charts - and Pastor did the charts." data-gallery>
         <img src="gallery/thumbnails/pastor.jpg" alt="Star of the show on website are the interactive charts - and Pastor did the charts.">
