Added Ian to the gallery.

--- a/index.html
+++ b/index.html
@@ -299,6 +299,9 @@
     <a href="gallery/indian.jpg" title="The Duchess of Delhi, probably the nicest spot in Cardiff Bay after Cote." data-gallery>
         <img src="gallery/thumbnails/indian.jpg" alt="The Duchess of Delhi, probably the nicest spot in Cardiff Bay after Cote.">
     </a>
+    <a href="gallery/ian.jpg" title="The kindest, grumpiest soul of the project and a true Scottish gentleman." data-gallery>
+        <img src="gallery/thumbnails/ian.jpg" alt="The kindest, grumpiest soul of the project and a true Scottish gentleman.">
+    </a>
     <a href="gallery/kebab.jpg" title="We ate the most tasty and copious food at Turkish and Middle-Eastern restaurants." data-gallery>
         <img src="gallery/thumbnails/kebab.jpg" alt="We ate the most tasty and copious food at Turkish and Middle-Eastern restaurants.">
     </a>
